# Atmosphere

./: CMakeLists.txt  README.md
src/: files.c  files.h  glad.c  main.c  mathematics.c  mathematics.h  meshes.c  meshes.h
src/shaders/: atmosphere.fs  atmosphere.vs  basic.fs  copy.fs  copy.vs  d_atmosphere.fs  d_atmosphere.vs  phong.fs
